
noinst_LTLIBRARIES = libgrml.la

libgrml_la_SOURCES = expatmodelparser.cc expatmodelparser.hh modelhandler.hh modelwriter.hh modelwriter.cc tree/tree.hh tree/tree_util.hh

AM_CPPFLAGS= -Wall -Wextra -Wno-unused-local-typedef

# includes_HEADERS = expatmodelparser.hh modelhandler.hh modelwriter.hh tree/tree.hh tree/tree_util.hh
# includesdir = $(includedir)
