
lib_LTLIBRARIES = libClientSim.la

libClientSim_la_SOURCES = BatchR.cpp EventsQueue.hpp macro.h numSolverBB.cpp SimulatorContinuousBounded.cpp sparse_io.hpp BatchR.hpp foxglynn.c numSolverBB.hpp SimulatorContinuousBounded.hpp spn.hpp clientsim.cpp foxglynn.h numSolverSH.cpp Simulator.cpp stateSpace.cpp Event.cpp LHA.hpp marking.hpp numSolverSH.hpp Simulator.hpp stateSpace.hpp Event.hpp LHA_orig.cpp numericalSolver.cpp SimulatorBoundedRE.cpp SimulatorRE.cpp EventsQueue.cpp numericalSolver.hpp SimulatorBoundedRE.hpp SimulatorRE.hpp


includes_HEADERS = LHA.hpp marking.hpp spn.hpp
includesdir = $(includedir)

AM_CPPFLAGS = $(BOOST_CPPFLAGS)